--- a/public/css/front.css
+++ b/public/css/front.css
@@ -13,7 +13,7 @@ body.login .logo-title-container {
     position: absolute;
 }
 body.login .login-container {
-    position: unset;
+    position: inherit;
     top: 0;
     margin-top: unset;
 }
